--- a/func/.env
+++ b/func/.env
@@ -1,3 +1,16 @@
-MONGODB_DATABASE_NAME=FILL_THIS
-MONGO_CONNECTION_URL=FILL_THIS
-MONGODB_USER_COLLECTION=FILL_THIS
+MONGODB_DATABASE_NAME=lionx
+MONGO_CONNECTION_URL="mongodb://bnd:FILL_THIS@172.30.10.75:41000/?authSource=admin&replicaSet=rslionx&readPreference=secondary&appname=MongoDB%20Compass&ssl=false"
+MONGODB_USER_COLLECTION=users
+ETRIA_LOG_LEVEL=INFO
+ROOT_LOG_LEVEL=INFO
+HEIMDALL_FILE_BUCKET_NAME=heimdall_rsa
+HEIMDALL_AWS_ACCESS_KEY_ID=AKIATZVFXI25USQWCS5O
+HEIMDALL_AWS_SECRET_ACCESS_KEY=FILL_THIS
+HEIMDALL_REGION_NAME=sa-east-1
+HEIMDALL_BUCKET_NAME_KEY=auth-gateway-keys-dev
+HEIMDALL_JWT_REQUIRED_FIELDS=[]
+HEIMDALL_REDIS_HOST=172.30.11.235
+HEIMDALL_REDIS_PORT=6379
+HEIMDALL_REDIS_DB=0
+HEIMDALL_REDIS_USER=bnd
+HEIMDALL_REDIS_PASSWORD=FILL_THIS
