adjusting specs and test

--- a/func/.env
+++ b/func/.env
@@ -1,16 +1,14 @@
 MONGODB_DATABASE_NAME=lionx
-MONGO_CONNECTION_URL="mongodb://bnd:FILL_THIS@172.30.10.75:41000/?authSource=admin&replicaSet=rslionx&readPreference=secondary&appname=MongoDB%20Compass&ssl=false"
+MONGO_CONNECTION_URL="mongodb://jormungandr:<FILL_THIS>@172.30.10.75:41000/?authSource=admin&replicaSet=rslionx&readPreference=secondary&appname=MongoDB%20Compass&ssl=false"
 MONGODB_USER_COLLECTION=users
 ETRIA_LOG_LEVEL=INFO
 ROOT_LOG_LEVEL=INFO
 HEIMDALL_FILE_BUCKET_NAME=heimdall_rsa
 HEIMDALL_AWS_ACCESS_KEY_ID=AKIATZVFXI25USQWCS5O
-HEIMDALL_AWS_SECRET_ACCESS_KEY=FILL_THIS
+HEIMDALL_AWS_SECRET_ACCESS_KEY=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
+HEIMDALL_AWS_BUCKET_USERS_FILES=dtvm-users-files-dev
+HEIMDALL_AWS_BUCKET_TERMS=dtvm-terms-dev
 HEIMDALL_REGION_NAME=sa-east-1
 HEIMDALL_BUCKET_NAME_KEY=auth-gateway-keys-dev
 HEIMDALL_JWT_REQUIRED_FIELDS=[]
-HEIMDALL_REDIS_HOST=172.30.11.235
-HEIMDALL_REDIS_PORT=6379
-HEIMDALL_REDIS_DB=0
-HEIMDALL_REDIS_USER=bnd
-HEIMDALL_REDIS_PASSWORD=FILL_THIS
+HEIMDALL_REDIS_URL=redis://heimdal:<FILL_THIS>@172.30.11.235:6379?db=1
