--- a/specs-uat/env-get-user-review-env.yaml
+++ b/specs-uat/env-get-user-review-env.yaml
@@ -31,7 +31,7 @@ spec:
             - name: ASGI_FRAMEWORK
               value: "HYPERCORN"
             - name: MONGO_CONNECTION_URL
-              value: "mongodb://jormungandr:LIwn1In32LdowPqma@172.30.10.75:41000/?authSource=admin&replicaSet=rslionx&readPreference=secondary&appname=MongoDB%20Compass&ssl=false"
+              value: "mongodb://jormungandr:MMhsdanNNds32Malmnwqyrte@172.30.18.223:41000,172.30.19.240:41000,172.30.19.71:41000/?authSource=admin&replicaSet=rslionx&readPreference=secondary&ssl=false"
             - name: MONGODB_DATABASE_NAME
               value: "lionx"
             - name: MONGODB_USER_COLLECTION
@@ -41,13 +41,13 @@ spec:
             - name: HEIMDALL_FILE_BUCKET_NAME
               value: "heimdall_rsa"
             - name: HEIMDALL_BUCKET_NAME_KEY
-              value: "auth-gateway-keys-dev"
+              value: "auth-gateway-keys-uat"
             - name: HEIMDALL_AWS_ACCESS_KEY_ID
               value: "AKIATZVFXI25USQWCS5O"
             - name: HEIMDALL_AWS_SECRET_ACCESS_KEY
               value: "/5pswHkrCgWhMYrV7TM7oVm8VtulfzdYKE2rlS8"
             - name: HEIMDALL_REDIS_URL
-              value: "redis://heimdal:LLOnmUUffhaUHnewIz@172.30.11.235:6379?db=1"
+              value: "redis://heimdal:FBJAnjkqw21yjewkDSA@172.30.19.183:6379?db=1"
             - name: HEIMDALL_JWT_REQUIRED_FIELDS
               value: "[]"
   version: 2
