--- a/specs-uat/function-get-user-review-fn.yaml
+++ b/specs-uat/function-get-user-review-fn.yaml
@@ -1,14 +1,14 @@
 include:
 - ./func/*
 kind: ArchiveUploadSpec
-name: func-VaTV
+name: func-TeeA
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: get-user-review-fn-811161dc-19fb-4697-b6c0-32968fbb06f2
+  name: get-user-review-fn-51cd787b-254e-4d46-a049-a92088d59bb6
   namespace: default
 spec:
   deployment:
@@ -19,10 +19,10 @@ spec:
   source:
     checksum: {}
     type: url
-    url: archive://func-VaTV
+    url: archive://func-TeeA
 status:
   buildstatus: pending
-  lastUpdateTimestamp: "2022-07-15T20:31:07Z"
+  lastUpdateTimestamp: "2022-07-15T20:38:16Z"
 
 ---
 apiVersion: fission.io/v1
@@ -49,7 +49,7 @@ spec:
   package:
     functionName: main.user_data_review
     packageref:
-      name: get-user-review-fn-811161dc-19fb-4697-b6c0-32968fbb06f2
+      name: get-user-review-fn-51cd787b-254e-4d46-a049-a92088d59bb6
       namespace: default
   requestsPerPod: 1
   resources: {}
